--- a/ofertasemana.html
+++ b/ofertasemana.html
@@ -271,8 +271,8 @@
                 <div class="u-rotation-parent u-rotation-parent-12">
                   <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-25" src="https://png.pngtree.com/png-clipart/20201208/original/pngtree-beautiful-red-santa-hat-for-christmas-day-png-image_5600573.png" alt="" data-image-width="1200" data-image-height="1200">
                 </div>
-                <h5 class="u-text u-text-default u-text-26">R$239,90</h5>
-                <a href="https://s.shopee.com.br/6V6pagUL3N" class="u-border-none u-btn u-button-style u-hover-feature u-hover-palette-2-base u-btn-12">Botão</a>
+                <h5 class="u-text u-text-default u-text-26">R$36,90</h5>
+                <a href="https://s.shopee.com.br/6V6pagUL3N" class="u-border-none u-btn u-button-style u-hover-feature u-hover-palette-2-base u-btn-12">compre</a>
               </div>
             </div>
           </div>
